# whatifgpt

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  whatifgpt.py
.github/workflows/: codeql.yml
